Certificate expiry handling in DownloadNetworkTaskWorker, clean up deprecated warnings, SAF arbitrary file location new default